--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 
 <link rel="stylesheet" href="css/style.css">
+<meta name="google-site-verification" content="RWXcfCJMhBw7m1-le8Ox1xY88qXIlVzhOFDPHn254Sw" />
 </head>
 
 <body>
