change the devise

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h3>Panier</h3>
   <div id="cart-items"></div>
   <div class="cart-footer">
-    <span>Total : <strong id="cart-total-price">0 €</strong></span>
+    <span>Total : <strong id="cart-total-price">0 DH</strong></span>
     <button onclick="checkout()">Commander</button>
   </div>
 </div>
